vm/snapshots/natives-system-arraycopy-non_array_src-NonArraySrcErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayStoreException: arraycopy: source type java.lang.Object is not an array
	at java.lang.System.arraycopy(Native Method)
	at natives.system.arraycopy.non_array_src.NonArraySrcErrMain.main(NonArraySrcErrMain.java:8)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArrayStoreException: arraycopy: source type java.lang.Object is not an array
	at java.base/java.lang.System.arraycopy(Native Method)
	at natives.system.arraycopy.non_array_src.NonArraySrcErrMain.main(NonArraySrcErrMain.java:8)
