vm/snapshots/natives-system-arraycopy-null_src-NullSrcErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException
	at java.lang.System.arraycopy(Native Method)
	at natives.system.arraycopy.null_src.NullSrcErrMain.main(NullSrcErrMain.java:7)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException
	at java.base/java.lang.System.arraycopy(Native Method)
	at natives.system.arraycopy.null_src.NullSrcErrMain.main(NullSrcErrMain.java:7)
