vm/snapshots/primitives-bytes-errors-division_by_zero-DivisionByZeroErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at primitives.bytes.errors.division_by_zero.DivisionByZeroErrMain.main(DivisionByZeroErrMain.java:6)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at primitives.bytes.errors.division_by_zero.DivisionByZeroErrMain.main(DivisionByZeroErrMain.java:6)
